--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Please enable JavaScript to run this app.</noscript>
   </body>
 </html>
